tests/snapshots/files__branch_hoisting-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 0
@main(v0: int) {
  c1_: int = const 0;
  c2_: int = const 500;
  v3_: int = id c1_;
  v4_: int = id c1_;
  v5_: int = id v0;
  v6_: int = id c1_;
  v7_: int = id c2_;
.b8_:
  v9_: bool = eq v5_ v6_;
  c10_: int = const 2;
  br v9_ .b11_ .b12_;
.b11_:
  v13_: int = mul c10_ v4_;
  v14_: int = id v13_;
  v15_: int = id v4_;
  v16_: int = id v5_;
  v17_: int = id v5_;
  v18_: int = id v7_;
.b19_:
  c20_: int = const 1;
  v21_: int = add c20_ v4_;
  v22_: bool = lt v21_ v7_;
  v3_: int = id v14_;
  v4_: int = id v21_;
  v5_: int = id v5_;
  v6_: int = id v6_;
  v7_: int = id v7_;
  br v22_ .b8_ .b23_;
.b12_:
  c24_: int = const 3;
  v25_: int = mul c24_ v4_;
  v14_: int = id v25_;
  v15_: int = id v4_;
  v16_: int = id v5_;
  v17_: int = id v6_;
  v18_: int = id v7_;
  jmp .b19_;
.b23_:
  print v3_;
  ret;
}
