tests/snapshots/files__collatz-peg.snap
---
source: tests/files.rs
expression: visualization.result
---
digraph G {
subgraph {
node [ordering=out];
v0 [label="Θ_21"];
v1 [label="Θ_21"];
v2 [label="Θ_21"];
v3 [label="Θ_21"];
v4 [label="Θ_21"];
v5 [label="Θ_21"];
v6 [label="Θ_21"];
v7 [label="pass_21"];
v8 [label="no-op"];
v9 [label="no-op"];
v10 [label="no-op"];
v11 [label="no-op"];
v12 [label="no-op"];
v13 [label="no-op"];
v14 [label="no-op"];
v15 [label="arg 1"];
v16 [label="eq"];
v17 [label="div"];
v18 [label="mul"];
v19 [label="sub"];
v20 [label="eq"];
v21 [label="int"];
v22 [label="int"];
v23 [label="div"];
v24 [label="mul"];
v25 [label="add"];
v26 [label="Φ"];
v27 [label="Φ"];
v28 [label="Φ"];
v29 [label="Φ"];
v30 [label="Φ"];
v31 [label="Φ"];
v32 [label="Φ"];
v33 [label="Φ"];
v34 [label="int"];
v35 [label="Φ"];
v36 [label="Φ"];
v37 [label="Φ"];
v38 [label="Φ"];
v39 [label="Φ"];
v40 [label="Φ"];
v41 [label="Φ"];
v42 [label="Φ"];
v43 [label="arg 0"];
v44 [label="arg 0"];
v45 [label="int"];
v46 [label="int"];
v47 [label="int"];
v48 [label="int"];
v49 [label="eval_21"];
v50 [label="eval_21"];
v51 [label="eval_21"];
v52 [label="eval_21"];
v53 [label="eval_21"];
v54 [label="eval_21"];
v55 [label="eval_21"];
v56 [label="eq"];
v57 [label="div"];
v58 [label="mul"];
v59 [label="sub"];
v60 [label="eq"];
v61 [label="int"];
v62 [label="int"];
v63 [label="div"];
v64 [label="mul"];
v65 [label="add"];
v66 [label="Φ"];
v67 [label="Φ"];
v68 [label="Φ"];
v69 [label="Φ"];
v70 [label="Φ"];
v71 [label="Φ"];
v72 [label="Φ"];
v73 [label="Φ"];
v74 [label="int"];
v75 [label="Φ"];
v76 [label="Φ"];
v77 [label="Φ"];
v78 [label="Φ"];
v79 [label="Φ"];
v80 [label="Φ"];
v81 [label="Φ"];
v82 [label="Φ"];
v83 [label="eq"];
v84 [label="div"];
v85 [label="mul"];
v86 [label="sub"];
v87 [label="eq"];
v88 [label="int"];
v89 [label="int"];
v90 [label="div"];
v91 [label="mul"];
v92 [label="add"];
v93 [label="Φ"];
v94 [label="Φ"];
v95 [label="Φ"];
v96 [label="Φ"];
v97 [label="Φ"];
v98 [label="Φ"];
v99 [label="Φ"];
v100 [label="Φ"];
v101 [label="int"];
v102 [label="Φ"];
v103 [label="Φ"];
v104 [label="Φ"];
v105 [label="Φ"];
v106 [label="Φ"];
v107 [label="Φ"];
v108 [label="Φ"];
v109 [label="Φ"];
v110 [label="eq"];
v111 [label="div"];
v112 [label="mul"];
v113 [label="sub"];
v114 [label="eq"];
v115 [label="int"];
v116 [label="int"];
v117 [label="div"];
v118 [label="mul"];
v119 [label="add"];
v120 [label="Φ"];
v121 [label="Φ"];
v122 [label="Φ"];
v123 [label="Φ"];
v124 [label="Φ"];
v125 [label="Φ"];
v126 [label="Φ"];
v127 [label="Φ"];
v128 [label="int"];
v129 [label="Φ"];
v130 [label="Φ"];
v131 [label="Φ"];
v132 [label="Φ"];
v133 [label="Φ"];
v134 [label="Φ"];
v135 [label="Φ"];
v136 [label="Φ"];
v137 [label="eq"];
v138 [label="div"];
v139 [label="mul"];
v140 [label="sub"];
v141 [label="eq"];
v142 [label="int"];
v143 [label="int"];
v144 [label="div"];
v145 [label="mul"];
v146 [label="add"];
v147 [label="Φ"];
v148 [label="Φ"];
v149 [label="Φ"];
v150 [label="Φ"];
v151 [label="Φ"];
v152 [label="Φ"];
v153 [label="Φ"];
v154 [label="Φ"];
v155 [label="int"];
v156 [label="Φ"];
v157 [label="Φ"];
v158 [label="Φ"];
v159 [label="Φ"];
v160 [label="Φ"];
v161 [label="Φ"];
v162 [label="Φ"];
v163 [label="Φ"];
v164 [label="eq"];
v165 [label="div"];
v166 [label="mul"];
v167 [label="sub"];
v168 [label="eq"];
v169 [label="int"];
v170 [label="int"];
v171 [label="div"];
v172 [label="mul"];
v173 [label="add"];
v174 [label="Φ"];
v175 [label="Φ"];
v176 [label="Φ"];
v177 [label="Φ"];
v178 [label="Φ"];
v179 [label="Φ"];
v180 [label="Φ"];
v181 [label="Φ"];
v182 [label="int"];
v183 [label="Φ"];
v184 [label="Φ"];
v185 [label="Φ"];
v186 [label="Φ"];
v187 [label="Φ"];
v188 [label="Φ"];
v189 [label="Φ"];
v190 [label="Φ"];
v191 [label="eq"];
v192 [label="div"];
v193 [label="mul"];
v194 [label="sub"];
v195 [label="eq"];
v196 [label="int"];
v197 [label="int"];
v198 [label="div"];
v199 [label="mul"];
v200 [label="add"];
v201 [label="Φ"];
v202 [label="Φ"];
v203 [label="Φ"];
v204 [label="Φ"];
v205 [label="Φ"];
v206 [label="Φ"];
v207 [label="Φ"];
v208 [label="Φ"];
v209 [label="int"];
v210 [label="Φ"];
v211 [label="Φ"];
v212 [label="Φ"];
v213 [label="Φ"];
v214 [label="Φ"];
v215 [label="Φ"];
v216 [label="Φ"];
v217 [label="Φ"];
v218 [label="eq"];
v219 [label="div"];
v220 [label="mul"];
v221 [label="sub"];
v222 [label="eq"];
v223 [label="int"];
v224 [label="int"];
v225 [label="div"];
v226 [label="mul"];
v227 [label="add"];
v228 [label="Φ"];
v229 [label="Φ"];
v230 [label="Φ"];
v231 [label="Φ"];
v232 [label="Φ"];
v233 [label="Φ"];
v234 [label="Φ"];
v235 [label="Φ"];
v236 [label="int"];
v237 [label="Φ"];
v238 [label="Φ"];
v239 [label="Φ"];
v240 [label="Φ"];
v241 [label="Φ"];
v242 [label="Φ"];
v243 [label="Φ"];
v244 [label="Φ"];
v245 [label="PRINT"];
v0 -> v15;
v0 -> v35;
v1 -> v43;
v1 -> v36;
v2 -> v44;
v2 -> v38;
v3 -> v45;
v3 -> v39;
v4 -> v46;
v4 -> v40;
v5 -> v47;
v5 -> v41;
v6 -> v48;
v6 -> v42;
v7 -> v37;
v8 -> v75;
v9 -> v103;
v10 -> v132;
v11 -> v160;
v12 -> v188;
v13 -> v216;
v14 -> v244;
v16 -> v2;
v16 -> v4;
v17 -> v2;
v17 -> v3;
v18 -> v17;
v18 -> v3;
v19 -> v2;
v19 -> v18;
v20 -> v19;
v20 -> v6;
v23 -> v2;
v23 -> v3;
v24 -> v5;
v24 -> v2;
v25 -> v4;
v25 -> v24;
v26 -> v20;
v26 -> v0;
v26 -> v0;
v27 -> v20;
v27 -> v1;
v27 -> v1;
v28 -> v20;
v28 -> v21;
v28 -> v22;
v29 -> v20;
v29 -> v23;
v29 -> v25;
v30 -> v20;
v30 -> v3;
v30 -> v3;
v31 -> v20;
v31 -> v4;
v31 -> v4;
v32 -> v20;
v32 -> v5;
v32 -> v5;
v33 -> v20;
v33 -> v6;
v33 -> v6;
v35 -> v16;
v35 -> v0;
v35 -> v26;
v36 -> v16;
v36 -> v1;
v36 -> v27;
v37 -> v16;
v37 -> v34;
v37 -> v28;
v38 -> v16;
v38 -> v2;
v38 -> v29;
v39 -> v16;
v39 -> v3;
v39 -> v30;
v40 -> v16;
v40 -> v4;
v40 -> v31;
v41 -> v16;
v41 -> v5;
v41 -> v32;
v42 -> v16;
v42 -> v6;
v42 -> v33;
v49 -> v0;
v49 -> v7;
v50 -> v1;
v50 -> v7;
v51 -> v2;
v51 -> v7;
v52 -> v3;
v52 -> v7;
v53 -> v4;
v53 -> v7;
v54 -> v5;
v54 -> v7;
v55 -> v6;
v55 -> v7;
v56 -> v51;
v56 -> v53;
v57 -> v51;
v57 -> v52;
v58 -> v57;
v58 -> v52;
v59 -> v51;
v59 -> v58;
v60 -> v59;
v60 -> v55;
v63 -> v51;
v63 -> v52;
v64 -> v54;
v64 -> v51;
v65 -> v53;
v65 -> v64;
v66 -> v60;
v66 -> v49;
v66 -> v49;
v67 -> v60;
v67 -> v50;
v67 -> v50;
v68 -> v60;
v68 -> v61;
v68 -> v62;
v69 -> v60;
v69 -> v63;
v69 -> v65;
v70 -> v60;
v70 -> v52;
v70 -> v52;
v71 -> v60;
v71 -> v53;
v71 -> v53;
v72 -> v60;
v72 -> v54;
v72 -> v54;
v73 -> v60;
v73 -> v55;
v73 -> v55;
v75 -> v56;
v75 -> v49;
v75 -> v66;
v76 -> v56;
v76 -> v50;
v76 -> v67;
v77 -> v56;
v77 -> v74;
v77 -> v68;
v78 -> v56;
v78 -> v51;
v78 -> v69;
v79 -> v56;
v79 -> v52;
v79 -> v70;
v80 -> v56;
v80 -> v53;
v80 -> v71;
v81 -> v56;
v81 -> v54;
v81 -> v72;
v82 -> v56;
v82 -> v55;
v82 -> v73;
v83 -> v51;
v83 -> v53;
v84 -> v51;
v84 -> v52;
v85 -> v84;
v85 -> v52;
v86 -> v51;
v86 -> v85;
v87 -> v86;
v87 -> v55;
v90 -> v51;
v90 -> v52;
v91 -> v54;
v91 -> v51;
v92 -> v53;
v92 -> v91;
v93 -> v87;
v93 -> v49;
v93 -> v49;
v94 -> v87;
v94 -> v50;
v94 -> v50;
v95 -> v87;
v95 -> v88;
v95 -> v89;
v96 -> v87;
v96 -> v90;
v96 -> v92;
v97 -> v87;
v97 -> v52;
v97 -> v52;
v98 -> v87;
v98 -> v53;
v98 -> v53;
v99 -> v87;
v99 -> v54;
v99 -> v54;
v100 -> v87;
v100 -> v55;
v100 -> v55;
v102 -> v83;
v102 -> v49;
v102 -> v93;
v103 -> v83;
v103 -> v50;
v103 -> v94;
v104 -> v83;
v104 -> v101;
v104 -> v95;
v105 -> v83;
v105 -> v51;
v105 -> v96;
v106 -> v83;
v106 -> v52;
v106 -> v97;
v107 -> v83;
v107 -> v53;
v107 -> v98;
v108 -> v83;
v108 -> v54;
v108 -> v99;
v109 -> v83;
v109 -> v55;
v109 -> v100;
v110 -> v51;
v110 -> v53;
v111 -> v51;
v111 -> v52;
v112 -> v111;
v112 -> v52;
v113 -> v51;
v113 -> v112;
v114 -> v113;
v114 -> v55;
v117 -> v51;
v117 -> v52;
v118 -> v54;
v118 -> v51;
v119 -> v53;
v119 -> v118;
v120 -> v114;
v120 -> v49;
v120 -> v49;
v121 -> v114;
v121 -> v50;
v121 -> v50;
v122 -> v114;
v122 -> v115;
v122 -> v116;
v123 -> v114;
v123 -> v117;
v123 -> v119;
v124 -> v114;
v124 -> v52;
v124 -> v52;
v125 -> v114;
v125 -> v53;
v125 -> v53;
v126 -> v114;
v126 -> v54;
v126 -> v54;
v127 -> v114;
v127 -> v55;
v127 -> v55;
v129 -> v110;
v129 -> v49;
v129 -> v120;
v130 -> v110;
v130 -> v50;
v130 -> v121;
v131 -> v110;
v131 -> v128;
v131 -> v122;
v132 -> v110;
v132 -> v51;
v132 -> v123;
v133 -> v110;
v133 -> v52;
v133 -> v124;
v134 -> v110;
v134 -> v53;
v134 -> v125;
v135 -> v110;
v135 -> v54;
v135 -> v126;
v136 -> v110;
v136 -> v55;
v136 -> v127;
v137 -> v51;
v137 -> v53;
v138 -> v51;
v138 -> v52;
v139 -> v138;
v139 -> v52;
v140 -> v51;
v140 -> v139;
v141 -> v140;
v141 -> v55;
v144 -> v51;
v144 -> v52;
v145 -> v54;
v145 -> v51;
v146 -> v53;
v146 -> v145;
v147 -> v141;
v147 -> v49;
v147 -> v49;
v148 -> v141;
v148 -> v50;
v148 -> v50;
v149 -> v141;
v149 -> v142;
v149 -> v143;
v150 -> v141;
v150 -> v144;
v150 -> v146;
v151 -> v141;
v151 -> v52;
v151 -> v52;
v152 -> v141;
v152 -> v53;
v152 -> v53;
v153 -> v141;
v153 -> v54;
v153 -> v54;
v154 -> v141;
v154 -> v55;
v154 -> v55;
v156 -> v137;
v156 -> v49;
v156 -> v147;
v157 -> v137;
v157 -> v50;
v157 -> v148;
v158 -> v137;
v158 -> v155;
v158 -> v149;
v159 -> v137;
v159 -> v51;
v159 -> v150;
v160 -> v137;
v160 -> v52;
v160 -> v151;
v161 -> v137;
v161 -> v53;
v161 -> v152;
v162 -> v137;
v162 -> v54;
v162 -> v153;
v163 -> v137;
v163 -> v55;
v163 -> v154;
v164 -> v51;
v164 -> v53;
v165 -> v51;
v165 -> v52;
v166 -> v165;
v166 -> v52;
v167 -> v51;
v167 -> v166;
v168 -> v167;
v168 -> v55;
v171 -> v51;
v171 -> v52;
v172 -> v54;
v172 -> v51;
v173 -> v53;
v173 -> v172;
v174 -> v168;
v174 -> v49;
v174 -> v49;
v175 -> v168;
v175 -> v50;
v175 -> v50;
v176 -> v168;
v176 -> v169;
v176 -> v170;
v177 -> v168;
v177 -> v171;
v177 -> v173;
v178 -> v168;
v178 -> v52;
v178 -> v52;
v179 -> v168;
v179 -> v53;
v179 -> v53;
v180 -> v168;
v180 -> v54;
v180 -> v54;
v181 -> v168;
v181 -> v55;
v181 -> v55;
v183 -> v164;
v183 -> v49;
v183 -> v174;
v184 -> v164;
v184 -> v50;
v184 -> v175;
v185 -> v164;
v185 -> v182;
v185 -> v176;
v186 -> v164;
v186 -> v51;
v186 -> v177;
v187 -> v164;
v187 -> v52;
v187 -> v178;
v188 -> v164;
v188 -> v53;
v188 -> v179;
v189 -> v164;
v189 -> v54;
v189 -> v180;
v190 -> v164;
v190 -> v55;
v190 -> v181;
v191 -> v51;
v191 -> v53;
v192 -> v51;
v192 -> v52;
v193 -> v192;
v193 -> v52;
v194 -> v51;
v194 -> v193;
v195 -> v194;
v195 -> v55;
v198 -> v51;
v198 -> v52;
v199 -> v54;
v199 -> v51;
v200 -> v53;
v200 -> v199;
v201 -> v195;
v201 -> v49;
v201 -> v49;
v202 -> v195;
v202 -> v50;
v202 -> v50;
v203 -> v195;
v203 -> v196;
v203 -> v197;
v204 -> v195;
v204 -> v198;
v204 -> v200;
v205 -> v195;
v205 -> v52;
v205 -> v52;
v206 -> v195;
v206 -> v53;
v206 -> v53;
v207 -> v195;
v207 -> v54;
v207 -> v54;
v208 -> v195;
v208 -> v55;
v208 -> v55;
v210 -> v191;
v210 -> v49;
v210 -> v201;
v211 -> v191;
v211 -> v50;
v211 -> v202;
v212 -> v191;
v212 -> v209;
v212 -> v203;
v213 -> v191;
v213 -> v51;
v213 -> v204;
v214 -> v191;
v214 -> v52;
v214 -> v205;
v215 -> v191;
v215 -> v53;
v215 -> v206;
v216 -> v191;
v216 -> v54;
v216 -> v207;
v217 -> v191;
v217 -> v55;
v217 -> v208;
v218 -> v51;
v218 -> v53;
v219 -> v51;
v219 -> v52;
v220 -> v219;
v220 -> v52;
v221 -> v51;
v221 -> v220;
v222 -> v221;
v222 -> v55;
v225 -> v51;
v225 -> v52;
v226 -> v54;
v226 -> v51;
v227 -> v53;
v227 -> v226;
v228 -> v222;
v228 -> v49;
v228 -> v49;
v229 -> v222;
v229 -> v50;
v229 -> v50;
v230 -> v222;
v230 -> v223;
v230 -> v224;
v231 -> v222;
v231 -> v225;
v231 -> v227;
v232 -> v222;
v232 -> v52;
v232 -> v52;
v233 -> v222;
v233 -> v53;
v233 -> v53;
v234 -> v222;
v234 -> v54;
v234 -> v54;
v235 -> v222;
v235 -> v55;
v235 -> v55;
v237 -> v218;
v237 -> v49;
v237 -> v228;
v238 -> v218;
v238 -> v50;
v238 -> v229;
v239 -> v218;
v239 -> v236;
v239 -> v230;
v240 -> v218;
v240 -> v51;
v240 -> v231;
v241 -> v218;
v241 -> v52;
v241 -> v232;
v242 -> v218;
v242 -> v53;
v242 -> v233;
v243 -> v218;
v243 -> v54;
v243 -> v234;
v244 -> v218;
v244 -> v55;
v244 -> v235;
v245 -> v9;
v245 -> v8;
}
}

