tests/snapshots/files__collatz-rvsdg-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main(v0: int) {
  v3: int = const 0;
  v6: int = const 2;
  v8: int = const 1;
  v10: int = const 3;
  v13: int = id v3;
  v14: int = id v0;
  v15: int = id v6;
  v16: int = id v8;
  v17: int = id v10;
  v18: int = id v3;
  jmp .__20__;
<<<<<<< HEAD
.__119__:
  v126: int = const 1;
  v127: bool = eq v102 v126;
  v13: int = id v101;
  v14: int = id v103;
  v15: int = id v104;
  v16: int = id v105;
  v17: int = id v106;
  v18: int = id v107;
  br v127 .__20__ .__130__;
.__109__:
  v111: int = const 0;
  v101: int = id v13;
  v102: int = id v111;
  v103: int = id v14;
  v104: int = id v15;
  v105: int = id v16;
  v106: int = id v17;
  v107: int = id v18;
  jmp .__119__;
.__95__:
  v101: int = id v36;
=======
.__117__:
  v13: int = id v13;
  v14: int = id v101;
  v15: int = id v102;
  v16: int = id v103;
  v17: int = id v104;
  v18: int = id v105;
  br v100 .__20__ .__125__;
.__107__:
  v109: bool = const false;
  v99: int = id v13;
  v100: bool = id v109;
  v101: int = id v14;
  v102: int = id v15;
  v103: int = id v16;
  v104: int = id v17;
  v105: int = id v18;
  jmp .__117__;
.__93__:
  v99: int = id v13;
  v100: bool = id v73;
  v101: int = id v74;
>>>>>>> main
  v102: int = id v75;
  v103: int = id v76;
  v104: int = id v77;
  v105: int = id v78;
<<<<<<< HEAD
  v106: int = id v79;
  v107: int = id v80;
  jmp .__119__;
.__82__:
  v84: int = const 1;
  v88: int = div v14 v15;
  v74: int = id v36;
  v75: int = id v84;
  v76: int = id v88;
  v77: int = id v15;
  v78: int = id v16;
  v79: int = id v17;
  v80: int = id v18;
  jmp .__95__;
.__59__:
  v61: int = const 1;
  v66: int = mul v17 v14;
  v68: int = add v16 v66;
  v74: int = id v36;
  v75: int = id v61;
  v76: int = id v68;
  v77: int = id v15;
  v78: int = id v16;
  v79: int = id v17;
  v80: int = id v18;
  jmp .__95__;
.__33__:
  v36: int = add v13 v16;
  v41: int = div v14 v15;
  v44: int = mul v41 v15;
  v46: int = sub v14 v44;
  v49: bool = eq v46 v18;
  br v49 .__82__ .__59__;
.__20__:
  v23: bool = eq v14 v16;
  br v23 .__109__ .__33__;
.__130__:
=======
  jmp .__117__;
.__80__:
  v82: bool = const true;
  v86: int = div v14 v15;
  v72: int = id v13;
  v73: bool = id v82;
  v74: int = id v86;
  v75: int = id v15;
  v76: int = id v16;
  v77: int = id v17;
  v78: int = id v18;
  jmp .__93__;
.__57__:
  v59: bool = const true;
  v64: int = mul v17 v14;
  v66: int = add v16 v64;
  v72: int = id v13;
  v73: bool = id v59;
  v74: int = id v66;
  v75: int = id v15;
  v76: int = id v16;
  v77: int = id v17;
  v78: int = id v18;
  jmp .__93__;
.__34__:
  v39: int = div v14 v15;
  v42: int = mul v39 v15;
  v44: int = sub v14 v42;
  v47: bool = eq v44 v18;
  br v47 .__80__ .__57__;
.__20__:
  v24: bool = eq v14 v16;
  br v24 .__107__ .__34__;
.__125__:
>>>>>>> main
  print v13;
}

