tests/snapshots/files__collatz-structured.snap
---
source: tests/files.rs
expression: visualization.result
---
main {
block:
 three: int = const 3;
 two: int = const 2;
 one: int = const 1;
 zero: int = const 0;
 var: int = id arg;
 counter: int = id zero;
while true:
 cond: bool = eq var one;
 if cond:
  print counter;
  return
 else:
  counter: int = add counter one;
  d: int = div var two;
  m: int = mul d two;
  mod: int = sub var m;
  cond: bool = eq mod zero;
  if cond:
   var: int = div var two;
  else:
   v1: int = mul three var;
   var: int = add one v1;
}
