tests/snapshots/files__collatz_redundant_computation-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 8888
@main(v0: int) {
  c1_: int = const 1;
  c2_: int = const 3;
  c3_: int = const 2;
  c4_: int = const 0;
  v5_: int = id v0;
  v6_: int = id v0;
  v7_: int = id c1_;
  v8_: int = id c2_;
  v9_: int = id c3_;
  v10_: int = id c4_;
.b11_:
  v12_: bool = eq v6_ v7_;
  v13_: int = id v5_;
  v14_: int = id v6_;
  v15_: int = id v7_;
  v16_: int = id v8_;
  v17_: int = id v9_;
  v18_: int = id v10_;
  br v12_ .b19_ .b20_;
.b20_:
  print v6_;
  v21_: int = div v6_ v9_;
  v22_: int = mul v21_ v9_;
  v23_: int = sub v6_ v22_;
  v24_: bool = eq v10_ v23_;
  v25_: int = mul v6_ v8_;
  v26_: int = add v25_ v7_;
  c27_: bool = const true;
  v28_: int = id v5_;
  v29_: bool = id c27_;
  v30_: int = id v26_;
  v31_: int = id v7_;
  v32_: int = id v8_;
  v33_: int = id v9_;
  v34_: int = id v10_;
  br v24_ .b35_ .b36_;
.b35_:
  c37_: bool = const true;
  v28_: int = id v5_;
  v29_: bool = id c37_;
  v30_: int = id v21_;
  v31_: int = id v7_;
  v32_: int = id v8_;
  v33_: int = id v9_;
  v34_: int = id v10_;
  v13_: int = id v5_;
  v14_: int = id v30_;
  v15_: int = id v7_;
  v16_: int = id v8_;
  v17_: int = id v9_;
  v18_: int = id v10_;
.b19_:
  v38_: bool = not v12_;
  v5_: int = id v13_;
  v6_: int = id v14_;
  v7_: int = id v15_;
  v8_: int = id v16_;
  v9_: int = id v17_;
  v10_: int = id v18_;
  br v38_ .b11_ .b39_;
.b36_:
  v13_: int = id v5_;
  v14_: int = id v30_;
  v15_: int = id v7_;
  v16_: int = id v8_;
  v17_: int = id v9_;
  v18_: int = id v10_;
  jmp .b19_;
.b39_:
  print v0;
  ret;
}
